# SEAL

./: .pre-commit-config.yaml  LICENCE.md  README.md  SplineFunction.py  SplineSpace.py  lib.py  mypy.ini  pyproject.toml  setup.py
SEAL/: SplineFunction.py  SplineSpace.py  TensorProductSplineFunction.py  TensorProductSplineSpace.py  __init__.py  approximation.py  interpolation.py  lib.py
docs/: Makefile  conf.py  index.rst  introduction.rst  make.bat
examples/: approximation.py  interpolation.py  knot_refinement_spline_function.py  least_squares_tensor.py  linear_spline_interpolation.py  param_interpol.py  seal_logo.py  spline_functions.py  visualization_using_refinement.py  visualization_using_refinement_two.py
tests/: test_compute_finer_b_spline_coefficients.py  test_compute_knot_insertion_matrix.py  test_create_interpolation_knots.py  test_cubic_hermite_interpolation.py  test_evaluate_blossom.py  test_evaluate_non_zero_basis_splines.py  test_index.py  test_insert_midpoints.py  test_knot_factory.py  test_linear_spline_interpolation.py  test_splineFunction.py
