[tool.poetry]
name = "spline-algorithm-library"
version = "1.0.0"
description = "A spline library written in Python"
authors = ["Ivar Stangeby"]
license = "MIT"
packages = [
    { include = "SEAL" }
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
matplotlib = "^3.5.1"
pre-commit = "^2.17.0"
mypy = "^0.931"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
